# forecast

./: .dockerignore  .env.example  .gitignore  Dockerfile  GOLDEN_RULES_AUDIT.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
app/: config.py  main.py  worker.py
app/api/v1/: analytics.py  forecast.py  health.py  schemas.py
app/core/algorithms/: auto_select.py  confidence.py  exponential.py  holt.py  linear.py  metrics.py  moving_avg.py  seasonal.py
app/db/: models.py  ports.py  session.py
app/db/adapters/: clickhouse.py  in_memory.py  postgres.py
app/services/: cache.py
app/tasks/: etl.py  refresh.py
app/ui/: index.html
app/ui/static/: app.js  styles.css
infra/clickhouse/: init.sql
infra/grafana/dashboards/: forecast.json
infra/grafana/provisioning/dashboards/: dashboards.yaml
infra/grafana/provisioning/datasources/: clickhouse.yaml
tests/: conftest.py
tests/integration/: test_analytics.py  test_forecast_api.py  test_health.py
tests/unit/: test_algorithms.py  test_auto_select.py  test_cache.py  test_in_memory_adapter.py
