[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[project]
name = "forecast"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",

    # PostgreSQL async stack
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",           # async PG driver used by SQLAlchemy
    "alembic>=1.13.0",

    # Sync PG driver — used by Alembic only (async app uses asyncpg)
    "psycopg2-binary>=2.9.0",

    # Config / validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",  # reads from .env files

    # Redis cache
    "redis[asyncio]>=5.0.0",

    # Celery async task queue
    "celery[redis]>=5.3.0",

    # ClickHouse (Phase 3 — listed now so Docker image is stable)
    "clickhouse-connect>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",        # AsyncClient for FastAPI integration tests
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"           # every async test runs without @pytest.mark.asyncio
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "app/tasks/etl.py",         # requires live ClickHouse — covered by ETL-specific tests
    "alembic/*",                # migration scripts, not application logic
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
